switched to socketio

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "",
   "dependencies": {
     "express": "^4.17.3",
-	"ws": "^8.5.0"
+    "socket.io": "^4.4.1",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
